<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/pref_section_appearance_title">
    
    <PreferenceCategory
        android:title="@string/pref_cat_appearance_app">
        
        <Preference
            android:defaultValue="false"
            android:key="pref_dark_mode"
            android:title="@string/pref_select_theme_title"
            app:icon="@drawable/ic_outline_brush_24"
            app:widgetLayout="@layout/widget_preference_chevron" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_dynamic_colors"
            android:title="@string/pref_dynamic_colors_title"
            android:summary="@string/pref_dynamic_colors_summary"
            app:icon="@drawable/ic_outline_layers_24" />

        <Preference
            android:key="pref_lang"
            android:title="@string/pref_lang_title"
            android:defaultValue="system"
            app:icon="@drawable/ic_outline_public_24"
            app:widgetLayout="@layout/widget_preference_chevron" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_appearance_entries">
        
        <Preference
            android:defaultValue="false"
            android:key="pref_view_mode"
            android:title="@string/pref_view_mode_title"
            app:icon="@drawable/ic_outline_sort_24"
            app:widgetLayout="@layout/widget_preference_chevron" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_show_icons"
            android:title="@string/pref_show_icons_title"
            android:summary="@string/pref_show_icons_summary"
            app:icon="@drawable/ic_outline_add_photo_alternate_24" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_show_next_code"
            android:title="@string/pref_show_next_code_title"
            android:summary="@string/pref_show_next_code_summary"
            app:icon="@drawable/ic_outline_history_24" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_expiration_state"
            android:title="@string/pref_expiration_state_title"
            android:summary="@string/pref_expiration_state_summary"
            app:icon="@drawable/ic_timeline_24" />

        <Preference
            android:key="pref_code_group_size_string"
            android:title="@string/pref_code_group_size_title"
            android:summary="@string/pref_code_group_size_summary"
            android:defaultValue="GROUPING_THREES"
            app:icon="@drawable/ic_outline_code_24"
            app:widgetLayout="@layout/widget_preference_chevron" />

        <Preference
            android:key="pref_account_name_position"
            android:title="@string/pref_account_name_position_title"
            app:icon="@drawable/ic_outline_description_24"
            app:widgetLayout="@layout/widget_preference_chevron" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_shared_issuer_account_name"
            android:title="@string/pref_shared_issuer_account_name_title"
            android:summary="@string/pref_shared_issuer_account_name_summary"
            app:icon="@drawable/ic_outline_person_24" />

        <Preference
            android:key="pref_groups"
            android:title="@string/preference_manage_groups"
            android:summary="@string/preference_manage_groups_summary"
            app:icon="@drawable/ic_outline_group_24"
            app:widgetLayout="@layout/widget_preference_chevron" />

        <Preference
            android:key="pref_reset_usage_count"
            android:title="@string/preference_reset_usage_count"
            android:summary="@string/preference_reset_usage_count_summary"
            app:icon="@drawable/ic_outline_refresh_24"
            app:widgetLayout="@layout/widget_preference_chevron" />
    </PreferenceCategory>

</PreferenceScreen>
